--- a/photography/project.config.json
+++ b/photography/project.config.json
@@ -20,7 +20,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.8.3",
-  "appid": "wx42a49a86dfa0aec0",
+  "appid": "wxc5df7379aa4b5f6c",
   "projectname": "photoshow",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
